@@ -15,7 +15,7 @@ RUN apt-get update && \
     
 RUN apt-get install -y google-chrome-stable --allow-unauthenticated 
 
-ENV JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64" JAVA_OPTS="-Xmx1g -Xms512m -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime  -XX:+AlwaysPreTouch -XX:CMSInitiatingOccupancyFraction=15 -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4 -XX:NewRatio=2 -XX:+UseConcMarkSweepGC"
+ENV JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64" JAVA_OPTS="-Xmx512m -Xms512m -XX:+AlwaysPreTouch -XX:CMSInitiatingOccupancyFraction=15 -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4 -XX:NewRatio=2 -XX:+UseConcMarkSweepGC"
 RUN export JAVA_HOME && \
     export JAVA_OPTS
 RUN pip install --upgrade pip
